RESOLVED FIXED87962
[BlackBerry] Crash when closing web page if selection is active
https://bugs.webkit.org/show_bug.cgi?id=87962
Summary [BlackBerry] Crash when closing web page if selection is active
Arvid Nilsson
Reported 2012-05-31 05:39:02 PDT
Trying to remove a layer from the compositor at a stage where the compositor has been set to 0.
Attachments
Patch (1.99 KB, patch)
2012-05-31 05:44 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2012-05-31 05:44:08 PDT
Arvid Nilsson
Comment 2 2012-05-31 06:39:25 PDT
Comment on attachment 145063 [details] Patch Removing r flag based on discussions with Antonio
Arvid Nilsson
Comment 3 2012-05-31 06:53:12 PDT
Comment on attachment 145063 [details] Patch Maybe fix the crash now and clean up the parenting later
Arvid Nilsson
Comment 4 2012-05-31 06:58:39 PDT
Filed PR 161763 for cleaning up the WebOverlay parenting
WebKit Review Bot
Comment 5 2012-05-31 08:27:30 PDT
Comment on attachment 145063 [details] Patch Clearing flags on attachment: 145063 Committed r119105: <http://trac.webkit.org/changeset/119105>
WebKit Review Bot
Comment 6 2012-05-31 08:27:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.