[BlackBerry] Crash when closing web page if selection is active https://bugs.webkit.org/show_bug.cgi?id=87962

Patch by Arvid Nilsson <anilsson@rim.com> on 2012-05-31
Reviewed by Antonio Gomes.

The embedder may try to remove a layer from the compositor at a stage
where the compositor has been set to 0.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPage::addCompositingThreadOverlay):
(BlackBerry::WebKit::WebPage::removeCompositingThreadOverlay):

git-svn-id: svn://svn.chromium.org/blink/trunk@119105 bbb929c8-8fbe-4397-9dbb-9b2b20218538