third_party/WebKit/Source/WebKit/blackberry/Api/WebPage.cpp
@@ -6247,6 +6247,9 @@ void WebPage::addCompositingThreadOverlay(WebOverlay* overlay)
 {
 #if USE(ACCELERATED_COMPOSITING)
     ASSERT(Platform::userInterfaceThreadMessageClient()->isCurrentThread());
+    if (!d->compositor())
+        return;
+
     overlay->d->setPage(d);
     d->compositor()->addOverlay(overlay->d->layerCompositingThread());
 #endif
@@ -6256,7 +6259,8 @@ void WebPage::removeCompositingThreadOverlay(WebOverlay* overlay)
 {
 #if USE(ACCELERATED_COMPOSITING)
     ASSERT(Platform::userInterfaceThreadMessageClient()->isCurrentThread());
-    d->compositor()->removeOverlay(overlay->d->layerCompositingThread());
+    if (d->compositor())
+        d->compositor()->removeOverlay(overlay->d->layerCompositingThread());
     overlay->d->clear();
     overlay->d->setPage(0);
 #endif
